# outscraper-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
outscraper_mcp_server/: server.py
tests/: test_initialization.py
